# testing_framework

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md  tmp.cpp
.github/workflows/: build.yml  ci.yml
include/: CMakeLists.txt  assert.h  cli.h  expect.h  fixture.h  macros.h  registry.h  runner.h  test_case.h  test_framework.h  test_state.h  unit.h
include/cli/: cli.h  list_command.h  parser.h
include/core/: assert.h  base.h  expect.h  macros.h  macros_base.h  registry.h  runner.h  state.h  test_log.h  test_macros.h  test_output.h  test_state.h
include/internal/: assert.h  internal_base.h  test_macros.h
include/macros/: expect.h  internal_base.h  test_macros.h  test_state.h
include/mock/: mock.h  mock_function.h  mock_macros.h
include/unit/: cli.h  fixture.h  macros.h  mock.h  registry.h  runner.h  unit.h
include/unit/macros/: assert.h  expect.h  internal_base.h  mock_macros.h  test_macros.h
scripts/: pre-commit.sh
src/: CMakeLists.txt  cli.cpp  main.cpp  registry.cpp  runner.cpp  test_case.cpp  test_fixture.cpp  test_registry.cpp  test_runner.cpp  test_sample.cpp
src/cli/: cli.cpp  list_command.cpp
src/core/: registry.cpp  runner.cpp  state.cpp  test_registry.cpp  test_runner.cpp  test_state.cpp
src/mock/: mock.cpp
tests/: CMakeLists.txt  sample_test.cpp  selftest_macros.cpp  test_fixture.cpp  test_sample.cpp
utils/: short_path.h
