# include(FetchContent)
# FetchContent_Declare(
#     googletest
#     URL https://github.com/google/googletest/archive/refs/tags/release-1.12.1.zip
# )
# FetchContent_MakeAvailable(googletest)

# add_executable(unit_test test_main.cpp)
# target_link_libraries(unit_test GTest::gtest_main my_library)
